# accounts_service

./: .gitignore  Cargo.toml
src/: main.rs
src/persistence/: ports.rs
src/persistence/adapters/: postgres.rs
