[package]
name = "accounts_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.4", features = ["postgres", "sqlite"] }
async-trait = "0.1.80"

